--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
     id 'com.google.protobuf' version '0.8.17'
+    id 'com.ncorti.ktfmt.gradle' version '0.8.0'
 }
 
 android {
