--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,20 +1,19 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-    id 'com.google.devtools.ksp' version '1.6.21-1.0.6'
-    id 'kotlin-kapt'
+    id 'com.google.devtools.ksp'
     id 'dagger.hilt.android.plugin'
-    id 'com.google.protobuf' version '0.9.0'
-    id 'com.ncorti.ktfmt.gradle' version '0.8.0'
+    id 'com.google.protobuf' version '0.9.4'
+    id 'com.ncorti.ktfmt.gradle' version '0.16.0'
 }
 
 android {
-    compileSdk 32
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.kainalu.wordle"
         minSdk 23
-        targetSdk 32
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -38,8 +37,6 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
-        useIR = true
-
     }
     buildFeatures {
         compose true
@@ -57,19 +54,20 @@ android {
 
 ksp {
     arg("room.schemaLocation", "$projectDir/schemas".toString())
+    arg("room.generateKotlin", "true")
 }
 
 dependencies {
     def lifecycle_version = "2.4.1"
     def accompanist_version = "0.24.5-alpha"
-    def roomVersion = "2.4.2"
-    def nav_version = "2.4.2"
+    def roomVersion = "2.6.1"
+    def nav_version = "2.7.6"
 
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.4'
 
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.appcompat:appcompat:1.4.2'
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.11.0'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.foundation:foundation:$compose_version"
@@ -80,7 +78,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
-    implementation 'androidx.activity:activity-compose:1.4.0'
+    implementation 'androidx.activity:activity-compose:1.8.2'
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
 
     implementation "androidx.room:room-runtime:$roomVersion"
@@ -90,22 +88,23 @@ dependencies {
     implementation "androidx.datastore:datastore:1.0.0"
     implementation  "com.google.protobuf:protobuf-javalite:3.18.0"
     implementation "com.google.dagger:hilt-android:$daggerVersion"
-    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
-    kapt "com.google.dagger:hilt-compiler:$daggerVersion"
+    implementation "androidx.hilt:hilt-navigation-compose:1.1.0"
+    ksp "com.google.dagger:dagger-compiler:$daggerVersion"
+    ksp "com.google.dagger:hilt-compiler:$daggerVersion"
 
     implementation "com.google.accompanist:accompanist-systemuicontroller:$accompanist_version"
     implementation 'com.jakewharton.timber:timber:5.0.1'
 
     testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 }
 
 protobuf {
     protoc {
-        artifact = 'com.google.protobuf:protoc:3.19.4'
+        artifact = 'com.google.protobuf:protoc:3.25.1'
     }
 
     // Generates the java Protobuf-lite code for the Protobufs in this project. See
@@ -120,4 +119,16 @@ protobuf {
             }
         }
     }
+}
+
+androidComponents {
+    // workaround for https://github.com/google/ksp/issues/1590
+    onVariants(selector().all(), { variant ->
+        afterEvaluate {
+            def capName = variant.name.capitalize()
+            tasks.getByName("ksp${capName}Kotlin") {
+                setSource(tasks.getByName("generate${capName}Proto").outputs)
+            }
+        }
+    })
 }
