--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        compose_version = '1.2.0-rc01'
-        daggerVersion = '2.40.1'
+        compose_version = '1.5.4'
+        daggerVersion = '2.50'
     }
     repositories {
         google()
@@ -10,11 +10,15 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:8.2.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.20"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$daggerVersion"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+}
+
+plugins {
+    id 'com.google.devtools.ksp' version '1.9.20-1.0.14' apply false
 }
 
 task clean(type: Delete) {
