--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,35 +1,36 @@
 [versions]
-compose = "1.5.4"
+compose = "1.6.8"
 dagger = "2.50"
-lifecycle = "2.6.2"
+lifecycle = "2.8.4"
 room = "2.6.1"
 protobuf = "3.25.1"
+kotlin = "2.0.10"
 
 [libraries]
 android-gradle = "com.android.tools.build:gradle:8.5.2"
-kotlin = "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.20"
+kotlin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
 
 desugarJdkLibs = "com.android.tools:desugar_jdk_libs:2.0.4"
 
 # Compose
 androidx-compose-ui = { group = "androidx.compose.ui", name = "ui", version.ref = "compose" }
-androidx-compose-material3 = "androidx.compose.material3:material3:1.1.2"
+androidx-compose-material3 = "androidx.compose.material3:material3:1.2.1"
 androidx-compose-foundation = { group = "androidx.compose.foundation", name = "foundation", version.ref = "compose" }
 androidx-compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview", version.ref = "compose" }
 androidx-compose-material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "compose" }
 androidx-compose-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4", version.ref = "compose" }
 androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "compose" }
 
-androidx-core-ktx = "androidx.core:core-ktx:1.12.0"
-androidx-appcompat = "androidx.appcompat:appcompat:1.6.1"
-material = "com.google.android.material:material:1.11.0"
-androidx-navigation-compose = "androidx.navigation:navigation-compose:2.7.6"
-androidx-activity-compose = "androidx.activity:activity-compose:1.8.2"
+androidx-core-ktx = "androidx.core:core-ktx:1.13.1"
+androidx-appcompat = "androidx.appcompat:appcompat:1.7.0"
+material = "com.google.android.material:material:1.12.0"
+androidx-navigation-compose = "androidx.navigation:navigation-compose:2.7.7"
+androidx-activity-compose = "androidx.activity:activity-compose:1.9.1"
 androidx-constraintlayout-compose = "androidx.constraintlayout:constraintlayout-compose:1.0.1"
 
 # Lifecycle
 androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle" }
-androidx-lifecycle-viewmodel-ktx = { group = "androidx.lifecycle" , name = "lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
+androidx-lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
 androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycle" }
 androidx-lifecycle-livedata-ktx = { group = "androidx.lifecycle", name = "lifecycle-livedata-ktx", version.ref = "lifecycle" }
 
@@ -38,7 +39,7 @@ androidx-room-runtime = { group = "androidx.room", name = "room-runtime", versio
 androidx-room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 androidx-room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
 
-androidx-datastore = "androidx.datastore:datastore:1.0.0"
+androidx-datastore = "androidx.datastore:datastore:1.1.1"
 
 # Protobuf
 protobuf-javalite = { group = "com.google.protobuf", name = "protobuf-javalite", version.ref = "protobuf" }
@@ -48,16 +49,18 @@ protobuf-protoc = { group = "com.google.protobuf", name = "protoc", version.ref 
 dagger-compiler = { group = "com.google.dagger", name = "dagger-compiler", version.ref = "dagger" }
 dagger-hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "dagger" }
 dagger-hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "dagger" }
-androidx-hilt-navigation-compose = "androidx.hilt:hilt-navigation-compose:1.1.0"
+androidx-hilt-navigation-compose = "androidx.hilt:hilt-navigation-compose:1.2.0"
 
 timber = "com.jakewharton.timber:timber:5.0.1"
 
 junit = "junit:junit:4.13.2"
-androidx-test-junit = "androidx.test.ext:junit:1.1.5"
-androidx-test-espresso-core = "androidx.test.espresso:espresso-core:3.5.1"
+androidx-test-junit = "androidx.test.ext:junit:1.2.1"
+androidx-test-espresso-core = "androidx.test.espresso:espresso-core:3.6.1"
 
 [plugins]
-ksp = { id = "com.google.devtools.ksp", version = "1.9.20-1.0.14" }
+ksp = { id = "com.google.devtools.ksp", version = "2.0.10-1.0.24" }
 dagger-hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "dagger" }
 protobuf = { id = "com.google.protobuf", version = "0.9.4" }
 ktfmt = { id = "com.ncorti.ktfmt.gradle", version = "0.16.0" }
+org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
