--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,5 @@ android.useAndroidX=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 org.gradle.configuration-cache=true
+android.newDsl=false
+ksp.useKSP2=false
