--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,32 +1,32 @@
 [versions]
-compose = "1.7.5"
-dagger = "2.50"
-lifecycle = "2.8.7"
-room = "2.6.1"
-protobuf = "3.25.1"
-kotlin = "2.0.10"
+agp = "8.13.2"
+compose = "1.10.1"
+dagger = "2.58"
+lifecycle = "2.10.0"
+room = "2.7.2"
+protobuf = "4.33.4"
+kotlin = "2.1.20"
 
 [libraries]
-android-gradle = "com.android.tools.build:gradle:8.7.2"
+android-gradle = { group = "com.android.tools.build", name = "gradle", version.ref = "agp" }
 kotlin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
-
-desugarJdkLibs = "com.android.tools:desugar_jdk_libs:2.1.3"
+desugarJdkLibs = "com.android.tools:desugar_jdk_libs:2.1.5"
 
 # Compose
 androidx-compose-ui = { group = "androidx.compose.ui", name = "ui", version.ref = "compose" }
-androidx-compose-material3 = "androidx.compose.material3:material3:1.3.1"
+androidx-compose-material3 = "androidx.compose.material3:material3:1.4.0"
 androidx-compose-foundation = { group = "androidx.compose.foundation", name = "foundation", version.ref = "compose" }
 androidx-compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview", version.ref = "compose" }
-androidx-compose-material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "compose" }
+androidx-compose-material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version = "1.7.8" }
 androidx-compose-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4", version.ref = "compose" }
 androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "compose" }
 
-androidx-core-ktx = "androidx.core:core-ktx:1.15.0"
-androidx-appcompat = "androidx.appcompat:appcompat:1.7.0"
-material = "com.google.android.material:material:1.12.0"
-androidx-navigation-compose = "androidx.navigation:navigation-compose:2.8.4"
-androidx-activity-compose = "androidx.activity:activity-compose:1.9.3"
-androidx-constraintlayout-compose = "androidx.constraintlayout:constraintlayout-compose:1.1.0"
+androidx-core-ktx = "androidx.core:core-ktx:1.17.0"
+androidx-appcompat = "androidx.appcompat:appcompat:1.7.1"
+material = "com.google.android.material:material:1.13.0"
+androidx-navigation-compose = "androidx.navigation:navigation-compose:2.9.6"
+androidx-activity-compose = "androidx.activity:activity-compose:1.12.2"
+androidx-constraintlayout-compose = "androidx.constraintlayout:constraintlayout-compose:1.1.1"
 
 # Lifecycle
 androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle" }
@@ -39,7 +39,7 @@ androidx-room-runtime = { group = "androidx.room", name = "room-runtime", versio
 androidx-room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 androidx-room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
 
-androidx-datastore = "androidx.datastore:datastore:1.1.1"
+androidx-datastore = "androidx.datastore:datastore:1.2.0"
 
 # Protobuf
 protobuf-javalite = { group = "com.google.protobuf", name = "protobuf-javalite", version.ref = "protobuf" }
@@ -54,13 +54,13 @@ androidx-hilt-navigation-compose = "androidx.hilt:hilt-navigation-compose:1.2.0"
 timber = "com.jakewharton.timber:timber:5.0.1"
 
 junit = "junit:junit:4.13.2"
-androidx-test-junit = "androidx.test.ext:junit:1.2.1"
-androidx-test-espresso-core = "androidx.test.espresso:espresso-core:3.6.1"
+androidx-test-junit = "androidx.test.ext:junit:1.3.0"
+androidx-test-espresso-core = "androidx.test.espresso:espresso-core:3.7.0"
 
 [plugins]
-ksp = { id = "com.google.devtools.ksp", version = "2.0.10-1.0.24" }
+ksp = { id = "com.google.devtools.ksp", version = "2.1.20-1.0.32" }
 dagger-hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "dagger" }
-protobuf = { id = "com.google.protobuf", version = "0.9.4" }
-ktfmt = { id = "com.ncorti.ktfmt.gradle", version = "0.16.0" }
+protobuf = { id = "com.google.protobuf", version = "0.9.6" }
+ktfmt = { id = "com.ncorti.ktfmt.gradle", version = "0.25.0" }
 org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
