--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,9 +3,9 @@ agp = "8.13.2"
 compose = "1.10.3"
 dagger = "2.58"
 lifecycle = "2.10.0"
-room = "2.7.2"
+room = "2.8.4"
 protobuf = "4.33.5"
-kotlin = "2.1.20"
+kotlin = "2.3.10"
 
 [libraries]
 android-gradle = { group = "com.android.tools.build", name = "gradle", version.ref = "agp" }
@@ -42,7 +42,7 @@ androidx-room-compiler = { group = "androidx.room", name = "room-compiler", vers
 androidx-datastore = "androidx.datastore:datastore:1.2.0"
 
 # Protobuf
-protobuf-javalite = { group = "com.google.protobuf", name = "protobuf-javalite", version.ref = "protobuf" }
+protobuf-kotlin-lite = { group = "com.google.protobuf", name = "protobuf-kotlin-lite", version.ref = "protobuf" }
 protobuf-protoc = { group = "com.google.protobuf", name = "protoc", version.ref = "protobuf" }
 
 # Dagger/Hilt
@@ -58,7 +58,7 @@ androidx-test-junit = "androidx.test.ext:junit:1.3.0"
 androidx-test-espresso-core = "androidx.test.espresso:espresso-core:3.7.0"
 
 [plugins]
-ksp = { id = "com.google.devtools.ksp", version = "2.1.20-1.0.32" }
+ksp = { id = "com.google.devtools.ksp", version = "2.3.6" }
 dagger-hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "dagger" }
 protobuf = { id = "com.google.protobuf", version = "0.9.6" }
 ktfmt = { id = "com.ncorti.ktfmt.gradle", version = "0.25.0" }
