--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,15 +1,17 @@
 [versions]
-agp = "8.13.2"
+agp = "9.0.1"
 compose = "1.10.3"
-dagger = "2.58"
+dagger = "2.59.1"
 lifecycle = "2.10.0"
 room = "2.8.4"
 protobuf = "4.33.5"
 kotlin = "2.3.10"
+ksp = "2.3.6"
 
 [libraries]
 android-gradle = { group = "com.android.tools.build", name = "gradle", version.ref = "agp" }
 kotlin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
+ksp = { group = "com.google.devtools.ksp", name = "symbol-processing-gradle-plugin", version.ref = "ksp" }
 desugarJdkLibs = "com.android.tools:desugar_jdk_libs:2.1.5"
 
 # Compose
@@ -58,9 +60,8 @@ androidx-test-junit = "androidx.test.ext:junit:1.3.0"
 androidx-test-espresso-core = "androidx.test.espresso:espresso-core:3.7.0"
 
 [plugins]
-ksp = { id = "com.google.devtools.ksp", version = "2.3.6" }
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 dagger-hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "dagger" }
 protobuf = { id = "com.google.protobuf", version = "0.9.6" }
 ktfmt = { id = "com.ncorti.ktfmt.gradle", version = "0.25.0" }
-org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
